[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/wall.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Fonts/Ubuntu.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Prefabs/menu_labels.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/logo.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Scenes/Menu.gd" type="Script" id=6]
[ext_resource path="res://Music/Testing-With-Nature-_Funnel_-Harry-Callaghan.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, -1.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "start"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1312, 0 ), Vector2( 0, 0 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 6 )

[node name="wall" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 2, 0, 65536, 0, 0, 65575, 1, 0, 131111, 1, 0, 196647, 0, 0, 393216, 0, 0, 393217, 3, 0, 393218, 3, 0, 393219, 0, 0, 393229, 0, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 0, 0, 393240, 0, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 0, 0, 458752, 1, 0, 524288, 1, 0, 524326, 0, 0, 524327, 0, 0, 589824, 1, 0, 589830, 0, 0, 589831, 3, 0, 589832, 3, 0, 589833, 0, 0, 589863, 1, 0, 655360, 1, 0, 655399, 1, 0, 720896, 1, 0, 720913, 0, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 0, 0, 720927, 0, 0, 720928, 3, 0, 720929, 3, 0, 720930, 3, 0, 720931, 3, 0, 720932, 0, 0, 720935, 1, 0, 786432, 1, 0, 786471, 1, 0, 851968, 1, 0, 851977, 0, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 0, 0, 852007, 1, 0, 917504, 1, 0, 917543, 1, 0, 983040, 1, 0, 983047, 0, 0, 983048, 3, 0, 983049, 0, 0, 983079, 0, 0, 1048576, 1, 0, 1114112, 1, 0, 1114134, 3, 0, 1114135, 3, 0, 1114136, 3, 0, 1114137, 3, 0, 1114138, 3, 0, 1179648, 1, 0, 1179668, 3, 0, 1179669, 3, 0, 1179670, 3, 0, 1179671, 3, 0, 1179672, 3, 0, 1179673, 3, 0, 1179674, 3, 0, 1179675, 3, 0, 1179676, 3, 0, 1179677, 3, 0, 1179678, 3, 0, 1179679, 3, 0, 1245184, 1, 0, 1245185, 3, 0, 1245186, 3, 0, 1245187, 3, 0, 1245188, 3, 0, 1245189, 3, 0, 1245190, 3, 0, 1245191, 3, 0, 1245192, 3, 0, 1245193, 3, 0, 1245194, 3, 0, 1245203, 3, 0, 1245204, 3, 0, 1245205, 3, 0, 1245206, 3, 0, 1245207, 3, 0, 1245208, 3, 0, 1245209, 3, 0, 1245210, 3, 0, 1245211, 3, 0, 1245212, 3, 0, 1245213, 3, 0, 1245214, 3, 0, 1245215, 3, 0, 1245216, 3, 0, 1245217, 3, 0, 1310720, 1, 0, 1310721, 3, 0, 1310722, 3, 0, 1310723, 3, 0, 1310724, 3, 0, 1310725, 3, 0, 1310726, 3, 0, 1310727, 3, 0, 1310728, 3, 0, 1310729, 3, 0, 1310730, 3, 0, 1310731, 3, 0, 1310732, 3, 0, 1310733, 3, 0, 1310734, 3, 0, 1310735, 3, 0, 1310736, 3, 0, 1310737, 3, 0, 1310738, 3, 0, 1310739, 3, 0, 1310740, 3, 0, 1310741, 3, 0, 1310742, 3, 0, 1310743, 3, 0, 1310744, 3, 0, 1310745, 3, 0, 1310746, 3, 0, 1310747, 3, 0, 1310748, 3, 0, 1310749, 3, 0, 1310750, 3, 0, 1310751, 3, 0, 1310752, 3, 0, 1310753, 3, 0, 1310754, 3, 0, 1310755, 3, 0, 1310756, 3, 0, 1310757, 3, 0, 1310758, 3, 0, 1310759, 0, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1376269, 1, 0, 1376270, 1, 0, 1376271, 1, 0, 1376272, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 1, 0, 1376276, 1, 0, 1376277, 1, 0, 1376278, 1, 0, 1376279, 1, 0, 1376280, 1, 0, 1376281, 1, 0, 1376282, 1, 0, 1376283, 1, 0, 1376284, 1, 0, 1376285, 1, 0, 1376286, 1, 0, 1376287, 1, 0, 1376288, 1, 0, 1376289, 1, 0, 1376290, 1, 0, 1376291, 1, 0, 1376292, 1, 0, 1376293, 1, 0, 1376294, 1, 0, 1376295, 1, 0, 1441792, 2, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 1, 0, 1441805, 1, 0, 1441806, 1, 0, 1441807, 1, 0, 1441808, 1, 0, 1441809, 1, 0, 1441810, 1, 0, 1441811, 1, 0, 1441812, 1, 0, 1441813, 1, 0, 1441814, 1, 0, 1441815, 1, 0, 1441816, 1, 0, 1441817, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 1, 0, 1441822, 1, 0, 1441823, 1, 0, 1441824, 1, 0, 1441825, 1, 0, 1441826, 1, 0, 1441827, 1, 0, 1441828, 1, 0, 1441829, 1, 0, 1441830, 1, 0, 1441831, 2, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPanel" type="ColorRect" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -400.0
margin_right = 416.0
margin_bottom = -48.0
color = Color( 0, 0, 0, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="CanvasLayer/Control/MenuPanel/VBoxContainer"]
margin_top = 8.0
margin_right = 288.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Начать новую игру"

[node name="ContinueButton" type="Button" parent="CanvasLayer/Control/MenuPanel/VBoxContainer"]
margin_top = 56.0
margin_right = 288.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Продолжить"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="CanvasLayer/Control/MenuPanel/VBoxContainer"]
margin_top = 104.0
margin_right = 288.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 1 )
text = "Настройки"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlInfoButton" type="Button" parent="CanvasLayer/Control/MenuPanel/VBoxContainer"]
margin_top = 152.0
margin_right = 288.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 1 )
text = "Управление"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlesButton" type="Button" parent="CanvasLayer/Control/MenuPanel/VBoxContainer"]
margin_top = 200.0
margin_right = 288.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 1 )
text = "Авторы"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/MenuPanel/VBoxContainer"]
margin_top = 248.0
margin_right = 288.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 1 )
text = "Выход"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsPanel" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -736.0
margin_top = -496.0
margin_right = -64.0
margin_bottom = -48.0
color = Color( 0, 0, 0, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SettingsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Language" type="HBoxContainer" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer"]
margin_top = 89.0
margin_right = 608.0
margin_bottom = 119.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer/Language"]
margin_top = 3.0
margin_right = 60.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 4 )
text = "Язык: "

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer/Language"]
margin_left = 70.0
margin_right = 608.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Русский"
items = [ "Русский", null, false, 0, null, "English", null, false, 1, null ]
selected = 0

[node name="MusicVolume" type="HBoxContainer" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer"]
margin_top = 135.0
margin_right = 608.0
margin_bottom = 159.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer/MusicVolume"]
margin_right = 194.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Громкость музыки: "

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer/MusicVolume"]
margin_left = 204.0
margin_right = 608.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -65.0
max_value = 0.0

[node name="SoundVolume" type="HBoxContainer" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer"]
margin_top = 175.0
margin_right = 608.0
margin_bottom = 199.0
custom_constants/separation = 18

[node name="Label" type="Label" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer/SoundVolume"]
margin_right = 186.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Громкость звуков: "

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer/SoundVolume"]
margin_left = 204.0
margin_right = 608.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -80.0
max_value = 0.0

[node name="DialogVolume" type="HBoxContainer" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer"]
margin_top = 215.0
margin_right = 608.0
margin_bottom = 239.0
custom_constants/separation = 36

[node name="Label" type="Label" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer/DialogVolume"]
margin_right = 168.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Громкость фраз: "

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer/DialogVolume"]
margin_left = 204.0
margin_right = 608.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -80.0
max_value = 0.0

[node name="Fullscreen" type="HBoxContainer" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer"]
margin_top = 255.0
margin_right = 608.0
margin_bottom = 295.0

[node name="Label" type="Label" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer/Fullscreen"]
margin_top = 8.0
margin_right = 234.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Полноэкранный режим"

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/Control/SettingsPanel/VBoxContainer/Fullscreen"]
margin_left = 238.0
margin_right = 314.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )

[node name="ControlInfo" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -400.0
margin_right = -64.0
margin_bottom = -48.0
color = Color( 0, 0, 0, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/ControlInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Управление:

[A] - Движение влево
[D] - Движение вправо
[Space] - Прыжок
[E] - Использовать и/или подобрать
[ЛКМ] - Стрельба"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="CanvasLayer/Control"]
margin_left = 32.0
margin_top = 64.0
margin_right = 448.0
margin_bottom = 140.0
rect_rotation = 1.0
rect_pivot_offset = Vector2( 208, 38 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/logo"]
autoplay = "start"
anims/start = SubResource( 3 )

[node name="fade" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1312.0
margin_right = 1312.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/fade"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.000976563
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/fade"]
anims/start = SubResource( 4 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Music"

[connection signal="pressed" from="CanvasLayer/Control/MenuPanel/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MenuPanel/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MenuPanel/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MenuPanel/VBoxContainer/ControlInfoButton" to="." method="_on_ControlInfoButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MenuPanel/VBoxContainer/TitlesButton" to="." method="_on_TitlesButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MenuPanel/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="item_selected" from="CanvasLayer/Control/SettingsPanel/VBoxContainer/Language/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="CanvasLayer/Control/SettingsPanel/VBoxContainer/MusicVolume/HSlider" to="." method="_on_MusicVolume_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/SettingsPanel/VBoxContainer/SoundVolume/HSlider" to="." method="_on_SoundVolume_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/SettingsPanel/VBoxContainer/DialogVolume/HSlider" to="." method="_on_DialogVolume_changed"]
[connection signal="toggled" from="CanvasLayer/Control/SettingsPanel/VBoxContainer/Fullscreen/CheckButton" to="." method="_on_CheckButton_toggled"]
